# machine-learning-id3

./: .gitignore  CMakeLists.txt  DataEngine.h  DecisionTree.h  README.md  adult.names  build_random_trees.cpp  compiling_error.txt  main.cpp  playtennis.csv  prune_rules.cpp  random_dataset.cpp  rebuild_forest.cpp  results  simple_test.cpp  test.cpp  test_forest.cpp
candidate elimination/: Candidate Elimination.cbp  Candidate Elimination.depend  Candidate Elimination.layout  a.out  main.cpp  readme.md
