cmake_minimum_required(VERSION 3.2)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set (CMAKE_CXX_STANDARD 11)
project(test_project)
add_executable(test_p test.cpp)
find_package(SQLiteCpp REQUIRED)
# find_package(sqlite3 REQUIRED)
# find_package(GLUT REQUIRED)
# include_directories( ${OPENGL_INCLUDE_DIRS})
target_link_libraries(test_p SQLiteCpp sqlite3)
